started making userguide webview pages, now showing correct pages in webview

--- a/app/src/main/assets/userguide/html/about.html
+++ b/app/src/main/assets/userguide/html/about.html
@@ -1,36 +1,73 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<!-- Required meta tags -->
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.min.css">
-		<title>Test</title>
-	</head>
-	<body>
-		<div class="container flex">
-			<h1 class="text-center pt-3">goSkate</h1>
-			
-			<nav class="navbar navbar-expand navbar-light bg-light justify-content-center">
-				<ul class="navbar-nav disabled">
-					<li class="nav-item px-1 px-md-5 px-sm-4">
-						<a class="nav-link" href="#">About</a>
-					</li>
-					<li class="nav-item px-1 px-md-5 px-sm-4">
-						<a class="nav-link" href="#">S.K.A.T.E</a>
-					</li>
-					<li class="nav-item px-1 px-md-5 px-sm-4">
-						<a class="nav-link" href="#">Maps</a>
-					</li>
-					<li class="nav-item px-1 px-md-5 px-sm-4">
-						<a class="nav-link" href="#">Profile</a>
-					</li>
-				</ul>
-			</nav>	
-		</div>
-		
-		<script src="../bootstrap-5.1.3-dist/js/bootstrap.min.js">
-		<script src="../bootstrap-5.1.3-dist/js/bootstrap.js">
-	</body>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/utils.css">
+    <link rel="stylesheet" href="../css/about.css">
+</head>
+<body>
+
+<ul class="topnav">
+    <li><a class="active">About</a></li>
+    <li><a href="maps.html">Maps</a></li>
+    <li><a href="dice.html">S.K.A.T.E</a></li>
+    <li><a href="profile.html">Profile</a></li>
+    <li class="right"><a href="admin.html">Admin</a></li>
+</ul>
+
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <img class="goSkateLabel" src="../assets/logo_goskate_full.png" alt="goSkate">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <h2 class="page-title">Wanna goSkate?</h2>
+            <p>Welcome to goSkate, the app which features a map that shows you the locations of
+                skate parks, skate spots, and skate shops. The app also features a S.K.A.T.E dice
+                which you can use to challenge yourself with your own list of tricks, or a pre-set
+                list based off different difficulties!</p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="wrapper">
+            <div class="scrolls">
+                <img class="scroll-image" src="../assets/holder_image.png">
+                <img class="scroll-image" src="../assets/holder_image1.png">
+                <img class="scroll-image" src="../assets/holder_image2.png">
+                <img class="scroll-image" src="../assets/holder_image.png">
+                <img class="scroll-image" src="../assets/holder_image1.png">
+                <img class="scroll-image" src="../assets/holder_image2.png">
+                <img class="scroll-image" src="../assets/holder_image.png">
+                <img class="scroll-image" src="../assets/holder_image1.png">
+                <img class="scroll-image" src="../assets/holder_image2.png">
+                <img class="scroll-image" src="../assets/holder_image.png">
+                <img class="scroll-image" src="../assets/holder_image1.png">
+                <img class="scroll-image" src="../assets/holder_image2.png">
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <p>The goSkate map gets filled by locations submitted by users, so if you don’t see your
+                local skate location, you can add it to the add in a few taps and it should be shown
+                on the skate maps within 24 hours!</p>
+            <p>The goal of the goSkate app is to make it easy to explore new spots where you can
+                skate, as well as new skate shops which you can visit and support! Share your spots
+                with other users and expand your potential.</p>
+            <p>This website aims to show you how to use the app, and how to make the most of it.</p>
+        </div>
+    </div>
+
+</div>
+
+<footer>
+    <p>Last updated 01/05/2022</p>
+</footer>
+
+</body>
 </html>
