--- a/app/src/main/assets/userguide/html/admin.html
+++ b/app/src/main/assets/userguide/html/admin.html
@@ -10,8 +10,8 @@
   <li><a href="about.html">About</a></li>
   <li><a href="maps.html">Maps</a></li>
   <li><a href="dice.html">S.K.A.T.E</a></li>
-  <li><a class="active">Profile</a></li>
-  <li class="right"><a href="admin.html">Admin</a></li>
+  <li><a href="profile.html">Profile</a></li>
+  <li class="right"><a class="active">Admin</a></li>
 </ul>
 
 <div class="container">
