--- a/app/src/main/assets/userguide/html/dice.html
+++ b/app/src/main/assets/userguide/html/dice.html
@@ -9,8 +9,8 @@
 <ul class="topnav">
   <li><a href="about.html">About</a></li>
   <li><a href="maps.html">Maps</a></li>
-  <li><a href="dice.html">S.K.A.T.E</a></li>
-  <li><a class="active">Profile</a></li>
+  <li><a class="active" >S.K.A.T.E</a></li>
+  <li><a href="profile.html">Profile</a></li>
   <li class="right"><a href="admin.html">Admin</a></li>
 </ul>
 
