added html pages for skate dice

--- a/app/src/main/assets/userguide/html/dice.html
+++ b/app/src/main/assets/userguide/html/dice.html
@@ -1,30 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../css/utils.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/utils.css">
 </head>
 <body>
 
 <ul class="topnav">
-  <li><a href="about.html">About</a></li>
-  <li><a href="maps.html">Maps</a></li>
-  <li><a class="active" >S.K.A.T.E</a></li>
-  <li><a href="profile.html">Profile</a></li>
-  <li class="right"><a href="admin.html">Admin</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="maps.html">Maps</a></li>
+    <li><a class="active">S.K.A.T.E</a></li>
+    <li><a href="profile.html">Profile</a></li>
+    <!--<li class="right"><a href="admin.html">Admin</a></li>-->
 </ul>
 
 <div class="container">
-	<div class="row">
-		<div class="col">
-			<img class="goSkateLabel" src="../assets/logo_goskate_full.png" alt="goSkate">
-		</div>
-	</div>
-	<div class="row">
-		<div class="col">
-		
-		</div>
-	</div>
+    <div class="row">
+        <div class="col">
+            <img class="goSkateLabel" src="../assets/logo_goskate_full.png" alt="goSkate">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <h2 class="center-text">S.K.A.T.E Dice</h2>
+            <p>Don’t know what tricks to use in a game of SKATE? Or do you want to test your flat
+                ground skating abilities? The S.K.A.T.E dice in the goSkate app can be used to solve
+                these problems! The S.K.A.T.E dice allows you to randomly roll tricks from your own
+                list
+                or from a pre-set list of tricks with different levels of difficulty built into
+                them.</p>
+            <p>To get started with the S.K.A.T.E dice, choose to play with your own list of tricks
+                or from a pre-set list.</p>
+
+            <br>
+            <h2 class="center-text">Playing with a pre-set list</h2>
+            <p>If you have chosen to play with a pre-set list, simply pick from one of the options
+                listed to you. This will then take you to the SKATE screen.</p>
+
+            <br>
+            <h2 class="center-text">Playing with a custom list</h2>
+            <p>If you have chosen to make your own custom list of tricks, you will be taken to a
+                screen which allows you to add tricks to a list. To get started with this, simply
+                press the input box at the bottom of the screen to bring up your keyboard, type in a
+                trick and press the “add trick” button. Once you have entered at least 5 tricks, you
+                will be able to start playing your custom game of S.K.A.T.E using the “play” button
+                located at the top of the screen.</p>
+
+            <br>
+            <h2 class="center-text">Playing S.K.A.T.E</h2>
+            <p>To start your game of S.K.A.T.E, press the “Start” button to roll the first trick of
+                the game. Once this is pressed, a trick will be displayed to you to attempt in the
+                top half of the screen; give the trick an attempt. If you land the trick with the
+                first attempt, press the green tick button; otherwise press the red cross button.
+                Pressing either of these buttons will advance the game by rolling the next trick for
+                you to try, however pressing the red cross will give you a letter. </p>
+            <p>The game ends when you collect 5 letters (S, K, A, T, E) or if you successfully
+                complete all the tricks in the list! Remember though that before getting your last
+                letter (E), you have two tries of the final trick. </p>
+
+            <br>
+            <h4 class="center-text">Good luck!</h4>
+        </div>
+    </div>
+
+    <div class="bottom-spacer"></div>
 </div>
 
 </body>
