--- a/app/src/main/assets/userguide/html/maps.html
+++ b/app/src/main/assets/userguide/html/maps.html
@@ -11,7 +11,7 @@
     <li><a class="active">Maps</a></li>
     <li><a href="dice.html">S.K.A.T.E</a></li>
     <li><a href="profile.html">Profile</a></li>
-    <li class="right"><a href="admin.html">Admin</a></li>
+    <!--<li class="right"><a href="admin.html">Admin</a></li>-->
 </ul>
 
 <div class="container">
@@ -23,7 +23,7 @@
 
     <div class="row">
         <div class="col">
-            <h2 class="page-title">Using the Maps</h2>
+            <h2 class="center-text">Using the Maps</h2>
             <p>The “Map” tab on the goSkate app allows you to view all skate locations on our
                 databases on a map. Different location types are represented using different
                 coloured map markers.</p>
@@ -37,7 +37,7 @@
                 the screen in the bottom right-hand side of the screen, of which open the location
                 in google maps, allowing you to view the location’s address or navigate to it.</p>
             <br>
-            <h2 class="page-title">Adding a location to the map</h2>
+            <h2 class="center-text">Adding a location to the map</h2>
             <p>Can’t find your local skatepark? You can always request for it to be added by using
                 the location adding feature on goSkate. This can be accessed through the “plus”
                 button in the bottom right-hand side of the Map tab. Pressing on this will bring up
@@ -50,23 +50,8 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col">
-            <p>Place holder text</p>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col">
-            <p>Place holder text</p>
-        </div>
-    </div>
-
+    <div class="bottom-spacer"></div>
 </div>
-
-<footer>
-    <p>Last updated 01/05/2022</p>
-</footer>
 
 </body>
 </html>
