--- a/app/src/main/assets/userguide/html/about.html
+++ b/app/src/main/assets/userguide/html/about.html
@@ -12,7 +12,7 @@
     <li><a href="maps.html">Maps</a></li>
     <li><a href="dice.html">S.K.A.T.E</a></li>
     <li><a href="profile.html">Profile</a></li>
-    <li class="right"><a href="admin.html">Admin</a></li>
+    <!--<li class="right"><a href="admin.html">Admin</a></li>-->
 </ul>
 
 <div class="container">
@@ -24,7 +24,7 @@
 
     <div class="row">
         <div class="col">
-            <h2 class="page-title">Wanna goSkate?</h2>
+            <h2 class="center-text">Wanna goSkate?</h2>
             <p>Welcome to goSkate, the app which features a map that shows you the locations of
                 skate parks, skate spots, and skate shops. The app also features a S.K.A.T.E dice
                 which you can use to challenge yourself with your own list of tricks, or a pre-set
@@ -63,11 +63,8 @@
         </div>
     </div>
 
+    <div class="bottom-spacer"></div>
 </div>
-
-<footer>
-    <p>Last updated 01/05/2022</p>
-</footer>
 
 </body>
 </html>
