--- a/app/src/main/assets/userguide/html/admin.html
+++ b/app/src/main/assets/userguide/html/admin.html
@@ -22,7 +22,7 @@
 	</div>
 	<div class="row">
 		<div class="col">
-		
+			<p>Admin tutorial page not really needed...</p>
 		</div>
 	</div>
 </div>
