--- a/app/src/main/assets/userguide/html/profile.html
+++ b/app/src/main/assets/userguide/html/profile.html
@@ -11,7 +11,7 @@
   <li><a href="maps.html">Maps</a></li>
   <li><a href="dice.html">S.K.A.T.E</a></li>
   <li><a class="active">Profile</a></li>
-  <li class="right"><a href="admin.html">Admin</a></li>
+	<!--<li class="right"><a href="admin.html">Admin</a></li>-->
 </ul>
 
 <div class="container">
