Webview pages completed

--- a/app/src/main/assets/userguide/html/about.html
+++ b/app/src/main/assets/userguide/html/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/utils.css">
-    <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="../css/gallery_scroll.css">
 </head>
 <body>
 
@@ -29,24 +29,28 @@
                 skate parks, skate spots, and skate shops. The app also features a S.K.A.T.E dice
                 which you can use to challenge yourself with your own list of tricks, or a pre-set
                 list based off different difficulties!</p>
+            <p>Swipe to view images below</p>
         </div>
     </div>
 
     <div class="row">
         <div class="wrapper">
             <div class="scrolls">
-                <img class="scroll-image" src="../assets/holder_image.png">
-                <img class="scroll-image" src="../assets/holder_image1.png">
-                <img class="scroll-image" src="../assets/holder_image2.png">
-                <img class="scroll-image" src="../assets/holder_image.png">
-                <img class="scroll-image" src="../assets/holder_image1.png">
-                <img class="scroll-image" src="../assets/holder_image2.png">
-                <img class="scroll-image" src="../assets/holder_image.png">
-                <img class="scroll-image" src="../assets/holder_image1.png">
-                <img class="scroll-image" src="../assets/holder_image2.png">
-                <img class="scroll-image" src="../assets/holder_image.png">
-                <img class="scroll-image" src="../assets/holder_image1.png">
-                <img class="scroll-image" src="../assets/holder_image2.png">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_maps_main.jpg">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_maps_marker.jpg">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_dice_choose.jpg">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_difficulty.jpg">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_custom_dice_list.jpg">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_dice_start.jpg">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_dice_play.jpg">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_add_loc_type.jpg">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_add_shop.jpg">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_add_spot.jpg">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_add_park.jpg">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_register.png">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_login.png">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_profile.jpg">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_edit_profile.jpg">
             </div>
         </div>
     </div>
