--- a/app/src/main/assets/userguide/html/dice.html
+++ b/app/src/main/assets/userguide/html/dice.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/utils.css">
+    <link rel="stylesheet" href="../css/gallery_scroll.css">
 </head>
 <body>
 
@@ -27,27 +28,62 @@
             <p>Don’t know what tricks to use in a game of SKATE? Or do you want to test your flat
                 ground skating abilities? The S.K.A.T.E dice in the goSkate app can be used to solve
                 these problems! The S.K.A.T.E dice allows you to randomly roll tricks from your own
-                list
-                or from a pre-set list of tricks with different levels of difficulty built into
+                list or from a pre-set list of tricks with different levels of difficulty built into
                 them.</p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="wrapper-single">
+            <img class="scroll-image" src="../assets/app_screenshots/ss_dice_choose.jpg">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
             <p>To get started with the S.K.A.T.E dice, choose to play with your own list of tricks
                 or from a pre-set list.</p>
-
             <br>
             <h2 class="center-text">Playing with a pre-set list</h2>
             <p>If you have chosen to play with a pre-set list, simply pick from one of the options
-                listed to you. This will then take you to the SKATE screen.</p>
+                listed to you.</p>
+        </div>
+    </div>
 
+    <div class="row">
+        <div class="wrapper-single">
+            <img class="scroll-image" src="../assets/app_screenshots/ss_difficulty.jpg">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <p>This will then take you to the play screen, see the "Playing S.K.A.T.E" section.</p>
             <br>
             <h2 class="center-text">Playing with a custom list</h2>
             <p>If you have chosen to make your own custom list of tricks, you will be taken to a
                 screen which allows you to add tricks to a list. To get started with this, simply
                 press the input box at the bottom of the screen to bring up your keyboard, type in a
-                trick and press the “add trick” button. Once you have entered at least 5 tricks, you
+                trick and press the “add trick” button.</p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="wrapper-single">
+            <img class="scroll-image" src="../assets/app_screenshots/ss_custom_dice_list.jpg">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <p>Once you have entered at least 5 tricks, you
                 will be able to start playing your custom game of S.K.A.T.E using the “play” button
                 located at the top of the screen.</p>
+        </div>
+    </div>
 
-            <br>
+    <div class="row">
+        <div class="col">
             <h2 class="center-text">Playing S.K.A.T.E</h2>
             <p>To start your game of S.K.A.T.E, press the “Start” button to roll the first trick of
                 the game. Once this is pressed, a trick will be displayed to you to attempt in the
@@ -55,6 +91,18 @@
                 first attempt, press the green tick button; otherwise press the red cross button.
                 Pressing either of these buttons will advance the game by rolling the next trick for
                 you to try, however pressing the red cross will give you a letter. </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="wrapper"s>
+            <img class="scroll-image" src="../assets/app_screenshots/ss_dice_start.jpg">
+            <img class="scroll-image" src="../assets/app_screenshots/ss_dice_play.jpg">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
             <p>The game ends when you collect 5 letters (S, K, A, T, E) or if you successfully
                 complete all the tricks in the list! Remember though that before getting your last
                 letter (E), you have two tries of the final trick. </p>
