--- a/app/src/main/assets/userguide/html/maps.html
+++ b/app/src/main/assets/userguide/html/maps.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/utils.css">
+    <link rel="stylesheet" href="../css/gallery_scroll.css">
 </head>
 <body>
 
@@ -32,13 +33,34 @@
                 <li>Skate spots are represented by Blue markers</li>
                 <li>Skate parks are represented by Yellow markers</li>
             </ul>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="wrapper-single">
+            <img class="scroll-image" src="../assets/app_screenshots/ss_maps_main.jpg">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
             <p>Pressing on a marker will display a card with the name of the location, and a short
                 description of the location itself. Additionally, two small buttons will appear on
                 the screen in the bottom right-hand side of the screen, of which open the location
                 in google maps, allowing you to view the location’s address or navigate to it.</p>
-            <br>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="wrapper-single">
+            <img class="scroll-image" src="../assets/app_screenshots/ss_maps_marker.jpg">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
             <h2 class="center-text">Adding a location to the map</h2>
-            <p>Can’t find your local skatepark? You can always request for it to be added by using
+            <p>Can’t find your local skate park? You can always request for it to be added by using
                 the location adding feature on goSkate. This can be accessed through the “plus”
                 button in the bottom right-hand side of the Map tab. Pressing on this will bring up
                 a new screen which asks you which type of location you would like to add, after
@@ -47,6 +69,18 @@
                 your location for approval by an admin user, of which if suitable, your location
                 will be added to the Maps tab within 24 hours. </p>
             <b>To use this feature, you must be signed in.</b>
+            <p>Swipe to view images below</p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="wrapper">
+            <div class="scrolls">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_add_loc_type.jpg">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_add_shop.jpg">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_add_spot.jpg">
+                <img class="scroll-image" src="../assets/app_screenshots/ss_add_park.jpg">
+            </div>
         </div>
     </div>
 
