--- a/app/src/main/assets/userguide/html/profile.html
+++ b/app/src/main/assets/userguide/html/profile.html
@@ -1,30 +1,108 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../css/utils.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/utils.css">
+    <link rel="stylesheet" href="../css/gallery_scroll.css">
 </head>
 <body>
 
 <ul class="topnav">
-  <li><a href="about.html">About</a></li>
-  <li><a href="maps.html">Maps</a></li>
-  <li><a href="dice.html">S.K.A.T.E</a></li>
-  <li><a class="active">Profile</a></li>
-	<!--<li class="right"><a href="admin.html">Admin</a></li>-->
+    <li><a href="about.html">About</a></li>
+    <li><a href="maps.html">Maps</a></li>
+    <li><a href="dice.html">S.K.A.T.E</a></li>
+    <li><a class="active">Profile</a></li>
+    <!--<li class="right"><a href="admin.html">Admin</a></li>-->
 </ul>
 
 <div class="container">
-	<div class="row">
-		<div class="col">
-			<img class="goSkateLabel" src="../assets/logo_goskate_full.png" alt="goSkate">
-		</div>
-	</div>
-	<div class="row">
-		<div class="col">
-		
-		</div>
-	</div>
+    <div class="row">
+        <div class="col">
+            <img class="goSkateLabel" src="../assets/logo_goskate_full.png" alt="goSkate">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <h2 class="center-text">User Profiles</h2>
+            <p>When pressing onto the profile tab on launching the app for the first time, you will
+                be taken to the login screen where existing users can log back into their accounts
+                with their email and password.</p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="wrapper-single">
+            <img class="scroll-image" src="../assets/app_screenshots/ss_login.png">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <br>
+            <h2 class="center-text">Register a new account</h2>
+            <p>However, new users will have the option to Register an account to the app. </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="wrapper-single">
+            <img class="scroll-image" src="../assets/app_screenshots/ss_register.png">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <p>When choosing this option, you will be taken to a new screen which asks you to fill
+                in some fields to create your account. You will be asked to provide the
+                following:</p>
+            <ul>
+                <li>Username</li>
+                <li>Email address</li>
+                <li>Password (and confirmation of this password)</li>
+            </ul>
+            <p>After these details have been entered, you will be taken to your profile.</p>
+            <br>
+            <h2 class="center-text">Your Profile</h2>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="wrapper-single">
+            <img class="scroll-image" src="../assets/app_screenshots/ss_profile.jpg">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <p>On your profile, you have the ability to see your location contribution counter and
+                review counter! Additionally you have the ability to Edit your profile, where you
+                can change your username, or change your biography. </p>
+            <br>
+            <h2 class="center-text">Edit profile</h2>
+            <p>On this page, you can change your username and/or biography. Firstly, type in your
+                new username or biography, then press the “Submit Changes” button to lock in the
+                changes. </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="wrapper-single">
+            <img class="scroll-image" src="../assets/app_screenshots/ss_edit_profile.jpg">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <p>If you wish to only edit one field, you may leave the other empty!</p>
+            <br>
+            <h2 class="center-text">Why should I make an account?</h2>
+            <p>Making an account allows you to submit new locations off for approval by the
+                moderation team. If you want to add your own location to the map, you will need an
+                account to do so!</p>
+        </div>
+    </div>
+
+    <div class="bottom-spacer"></div>
 </div>
 
 </body>
